@@ -1,30 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST prompt_toolkit-0.31.tar.gz 91649 SHA256 fc1b97d3dfd6628a8a8cc518e7d0bd5aac05633249527cd99478e83993ec6b19 SHA512 f2a9fcb916f8678672ec69394329f10bbf08f9240722f668b3cb176f38513295a1cbf6e0a29b73fd5c560fb1e7269d8f191c0473fcb6d237d0e57186cedf1563 WHIRLPOOL 6b4c616ddf12b2f75e9dd3bebd36de387589c4644ef635b265fa14134bcef3af570b03a214c1d4098a0e65b0b87ac96b881fbc83d6a34b6d367e3d8c7bd59f2a
-DIST prompt_toolkit-0.34.tar.gz 109236 SHA256 f700f9a0ba7e69146921883542e7510284e0042c1c9d2448c3b675d11065a246 SHA512 0dc66886496b6589f8a0a559a625e780f1ef7b39fad1329ae9c1bd4ba74b30538e6463da2ec3d9ddc45a6c8d5c3bf4aa021315c68e5a25703084e5951483561a WHIRLPOOL 6d5ca3196f44f7ea7c4603aeaec55ebd419733e905dcd279d43f2fa536ea1416b5f0df8c48e8ef821151d6021a5cac924888dd2f4bc45e7b44fc89f16df01603
 DIST prompt_toolkit-0.37.tar.gz 113415 SHA256 680f0abab097619e013c75f4fc234f7734ee888a483d9492e326ecd7883c6859 SHA512 872596db85de5a53170033b6ed1a1dd3246044c2a886df0bee642d94353480d2406c6f9f340fb33bd8cef37cd960b1ced88c73d743f5bbce2783f9d95e8c17ad WHIRLPOOL 8993ec2e815d962cc584e3bda24d26989dfd4a8c1e4749f098d4e96a731b587327f8c36c938ff6c1aa0b67cfeb767c8c1af045684829e5ac2bcbf5ba062aecb3
-EBUILD prompt_toolkit-0.31.ebuild 812 SHA256 188275d66333cb53ae9c269f86612b07430dafbc5997f46c468d6a1ecca69bc7 SHA512 e731b66489cbc3c68bad2700e830a410c76fa3fb3c8630038be88033f8e7afc1f17e837d941307b336bcbc6b0c78ee3d3671a3e3f5e036cc8574202c5ba48a64 WHIRLPOOL ee8166633f68769810cac3fd57449cbecad0f3f08af26a4d03eb30d7273a6892df3364006c3bcc98efef8da178b5dcf5f5e79fc0db1425cbba079aae05f83d7a
-EBUILD prompt_toolkit-0.34.ebuild 812 SHA256 7c82338c036aedf3eb13d23956d3d2886fd4d62f335d837638fcbcb9a0b1f38b SHA512 57a72207c208ea5bd75fe5d0ee76a4ff6514f49eec57a2a5c40a5332ef21db327b6594535b649c810c1b028f46af929f4c35ce94c6849a55ffc328f42ced7f17 WHIRLPOOL 905be71c6264d7bf59824b0262e1823d0deb300862cbf43b95512c8cbaecdd050b0d28f87654f5826c07817bfc5922b4b1f82d293a5820705423b4c5ca1aea3f
+DIST prompt_toolkit-0.38.tar.gz 117066 SHA256 6cee2959747580a1f93e3e14ef2826f1d89845d19e5bc32f374c23988e2d5e66 SHA512 6d3bf3da038220eb872aa537d9c469daada969940790745e538e1d215ad50855ef9ceab30992ee7ecb7c43d618d121226dff2a6b720f6ea393239cd34f4a9fea WHIRLPOOL 58a1c3020aecdeb5e6e20404bd4bb736216cdfe0e7c92a443c2ab03c645a3b1a94d529fe1b065a1f0b2610a324f44d46eafe00fc0dda71fd3ab53cddc19ab377
 EBUILD prompt_toolkit-0.37.ebuild 921 SHA256 e2849cb3aa4745e0c86a91d369aa3c2a4b07b48e715d31bf9e8e183a733b7135 SHA512 8ccbe354f2b42ea62d7936f60d948fd41b7146d98c6b17b6d108c9410ceb1fc79c5c7b67d0a957a8fc1e211e3e3d609fd189fd7a15595d5a56b33b52f54293e1 WHIRLPOOL f7fe7da30883393fcff03baf6fb181c0fe9cb25888b3d73529e085f79f6872994843b35b1c4d4783070be0ad5268dc3519e7818e5285f6f62ee9cf72a6973e30
-MISC ChangeLog 730 SHA256 92bab2c40b903b71e01c3e368ed26579e0f83040ce054aafc07e30c8baba2f9d SHA512 d02f83167eb5d80ef043038242d995fbb5c1e093092e0d29c599ce613779b243ad6c5d2b46de13d743cb9ba52420ba50c6ba0a745ce8e19f84c8b73ac42ac051 WHIRLPOOL b147aa6693f86d27ab7be93841d4e0763e4c638125d1df791c38009a83f2b8a64851bfd320de842d8ce2db9a5974e3153f0f98f642547ef0d325705d5d5a7131
+EBUILD prompt_toolkit-0.38.ebuild 921 SHA256 6c1791aec1351602bb016ec51d9da66858b5e28b5379de58f97a7408b10851e7 SHA512 d361eb3d369c293664f6c8cff74d08dfe020ae492ddb5fd95b0e2d33f8d0c790401be66b28e0580f8a71c4d6fb157e5e4d4f0ad0a063ffb0df840ff0d933bd4c WHIRLPOOL e499cd8a4bb8dcc2ce7bde1c11e2f520a70bcacb80941a1b8c631ec0b686b213b025ded7336ae645baf144961ea732f4e080cea8edb33c0f5b97fce3238a74c0
+MISC ChangeLog 918 SHA256 6e94c5f695afc0e52d28fe29bfb396b246daaf72372f698164a57e0664346f9a SHA512 c2f0890ced9cc638abb2a94290450059d4c65cc04efe93a893bc68e75457b9618c650551f99c85775f8302fed894988f4470c5651d74f093f9839e0abc6bbc06 WHIRLPOOL d9f1333c73396f62b2e346c31bbe947cb029f7e71d4f3a053d833b3c57ae235a38df512e46d61f2b0b8824d2801187bc00ad60fa09757da5c82a241b8a739677
 MISC metadata.xml 236 SHA256 feedd499ae6ddebc364ebb0f38d08bfbcc6b5d499f805a307a9367fb82dd12e8 SHA512 02882c2ecdf4fe400bf3e4455df1feae173e12b6fbb09181ea50541bb9dbf43780a0ab00fa799ccf5b7f2c27dcf9d854e16146cfb336ff3270a7b4369e451860 WHIRLPOOL b6580a9428931142ea961e985e6b5c736ab716eefb85706692c780c11f97d6019be488493c2e2a51b7ae8b480be80276edddb2858fe19684d48df64433475e06
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJVVbbdXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVbrXNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmizgMQALuO22uMNIJpvjtai6tfdS9r
-/4Cj/VAW9aORiLz6tu6ZEsrfxMyHD+rXZAQu6hCLMTYrT7XwpD/jXQyYy3VzHzgv
-yWRxbOsHngpR198yV35peir6ARbuMZtHyWPrgpBToqxtgLQY8hGeEGiVjhLLlhgm
-AORQc8+pVMFrEfga2xF7NaYSIytN+rpG4HH6EnISBdwzDUGvhLBn0roXejH2vhoW
-3vG6Dn21lJcc6fYhpWVZ54DwD5flDDu5XylFdReJByewh5zO9raeKNK2DRoD6RWn
-vta0IFecKxOpJJk6pf//O2rRO+exvfYM8EzaRu+VlqhE+PHQv5biQbm70fGR/SyW
-vmym0rx2lTtyFdYwH/rvVLxpSfJEMaI/1/ML8+zagT35BqzO6loZ/yq/Ji3fytWU
-i+X/wKnDxx+F52U2rohmmYcL/ir/zKpZj8XfSRi0hE84RaOaeRPlmAuya4XGrXBw
-WYrcnWeXIWz0ti4S7+W501bqAf/qWGRqQKpnX1f0AHIa/Hiff71Nhfq59ifS+ouw
-PO3HiU+sqsIdCupHFrjV/1hh8P3xZvRIU367qINNSMKoi+Q4vYC9q3Sn9tRM9qu0
-rfQIfYVwsjGJuSgWryTjMWbru2UKVTf5X8UjbX+dEmf2HsOoue54ZGw6gu3SMCPS
-Y0vjoM/IjB6JBriP/MNy
-=Px+a
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiyLsQAK2i8d9T+c+vUkMGTHf3N0xs
+JFE0QbcRXcIF7iZ/X0aDJy/zgIFBVkRMkPvT+qXl1KqwDvjOyBORBJPAhfetWNHh
+N0tQIk5qDNgTMD7KCzyuGy0L7MmbWSWI/8lfpXXhFY6czjehh8f5/D4iVRTfFGVf
+JF4YVdy7Cctg0p/YVodM1VIJ6P/+/rs0MJGmHJB3eqjzsEYEUqang5vDB6hdTAwK
+n20W0U2jLt8E2idS20r85S7sCz9PZPW8tunZewXoTj8+lFz5IanAHahGz0hLqbM0
+lWEgyyhIDfoVTQn10aofT+Oh30hObm7zJeV2K76qWz10tqZr5n2mMkgSMejbmX6R
+bIEaU8DFXmIK1a0iOJyG5w8YJcQWhMQWgrTwtdaMBgD1EeW34P7YLjIFMcLeOOB7
+uxNzybfvSjx1mCAb3qcdHJhyPadNlwruYW8hcRnSmqbdyHeBsY/LA4nWaShx+iww
+1Q/AikMoLStURSNtw8/Rw926FcLcbyzo2PH6xAEVusi1a76zaUBJtlCbMheETrDU
+fs90Q+ZocF4S8LTkSRyKGsW93O/BE85Z3iFvXtFLc+eq6+kiOOuVvapvztIAEo46
+FnVSfhYdxMZTrqdgGA6Rx8DzGN62X28zMyRq2pbCojqa1eumjHLIt1DvHVbo60hd
+5C3nvtG6YO+ptHHUtBzp
+=gAfF
 -----END PGP SIGNATURE-----
