@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/prompt_toolkit/prompt_toolkit-0.31.ebuild,v 1.2 2015/02/27 15:57:43 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/prompt_toolkit/prompt_toolkit-0.38.ebuild,v 1.1 2015/06/03 08:07:36 jlec Exp $
 
 EAPI=5
 
@@ -25,3 +25,10 @@ RDEPEND="
 DEPEND="${RDEPEND}
 	dev-python/setuptools[${PYTHON_USEDEP}]
 "
+
+# not contained in tarball
+RESTRICT="test"
+
+python_test() {
+	"${PYTHON}" "${S}"/tests/run_tests.py || die
+}
