@@ -2,29 +2,27 @@
 Hash: SHA512
 
 DIST ptpython-0.10.tar.gz 20693 SHA256 d4229b8c48e8e0dcb596a3e4983fb00443aa565a7a9c0fdb2d8457424e7309e1 SHA512 7576b541de1ca69e247f15343bbc06a83683ed47fc4a955da95b3afed73b4dcb512988df802750d6620236b46f6bb24eab1d9ff5288606bfa52c05c577091bb6 WHIRLPOOL 486bca6fa38a4352a3071af095adc4d002cd4d8ef6c80d5092789885535514b6d13659cd1792cfd0167b651316d8340e2ce59db167e0182e35cb128872a7482e
-DIST ptpython-0.5.tar.gz 21015 SHA256 86103842c3a3c97735bda135b683a847f008037af322f5a1cd510e0e82d622b5 SHA512 2ee98cec79258fd471c1e38d20932844acd032b07a0b9ce3df1cdbf1ff2f191814ad5fce41008992933a466effb1726abb8a6b6d5a4de2912819225b4ac90fbf WHIRLPOOL d8d2da55eefbda01757237b199f8f6f64397054222d713e3bff4874430312ef9239cd9027edde09609f5040e8dc06cc8856f5edaaf77619af86353e77e8eb9f6
-DIST ptpython-0.8.tar.gz 21292 SHA256 342d966c6671f9cc57f7dc8eec2595411ad1cca0e3da25e0997f9812431cf4c0 SHA512 b30d8224be7b5d5c840edcc0cf2f68f12f2c8a136d511d0e12fcbd0fd311abc67cd6c8d4c9a426d3dbf01d278a335b883c3e8cc31a1dcc08a67cfc4d907385c8 WHIRLPOOL 8b52c2eeda5b474950ca7e8e5cd32d1e4ebce8d53fcd13e28e11358b423ba8d8a90ce4e2b8a3de5be4d3857bda6ec51a0d7cb6ea779c7ea92f3920a59e705bf3
+DIST ptpython-0.11.tar.gz 21759 SHA256 50b66e6544f50b156cbad8afa299df11e39c288dabd618f5b22ebee7776ccab2 SHA512 4762235eedba1e149cb7e2b8bf84c8d4de1281bb2b571484bdc82951da691d84faa0ad90fa82104e2adfc4074f4c21aaffb06edab148be5341086e4dfb2fbd72 WHIRLPOOL 41eab5ff26562596bd2d71bc3608d07b9d6b290914878d0b1c743782e64cd071fa7945211dbf77b117f906220f74b2a3ecc999e97bcdd06f5b68b5a5f843f630
 EBUILD ptpython-0.10.ebuild 872 SHA256 66f0aba9f0e295855dc1b4549108f8361e53a9c2f2eaca1ce62e537fb5ada7e4 SHA512 ee87ea243d71269551b19c2acf0bc620bd637d2427610a5a74d95166b78a5f321dbcd03b608f6d02781983b30cf0820cd07c44982a9266c4aaf826b0411991ad WHIRLPOOL ae402b9c41d5256217da0fb18b2c08640aee3ed62bf404a2d0c019337d6ce90a57a8370f6836ba2030dca5ae66847947da445814c16df666f853dd075b63a2a1
-EBUILD ptpython-0.5.ebuild 871 SHA256 0613b08f8658fe341c0bfef7db08e688f66b6fca8336d9007b174310092e91a4 SHA512 5279aad12dd4cc7390a1ad64f2f622c1b79f2b84bd4a30b1a0849458738b7e371e616e024cfe980e96b66b570864be97800fcd54250f66fe2bbc645c980d236a WHIRLPOOL bbbc8184dbc70cb45cd8451cdac83d00e6d2212fe75507071517d8481ff777f6f77e5f27e0c7e296dbd3fff718b02de5b471c6fdd25e9b7122a4569e496973be
-EBUILD ptpython-0.8.ebuild 871 SHA256 f7b7b2effa2f4cde8b560caf0f4894c9e39177d24b28ecbd4070176a90012f6a SHA512 89d85ced909175e38883899450f7aa09f96da32f559ca0cc77c1116c427c2d547732857c9575cee273f1073c060e9bd90fdc0b5100577a75451d76ebbf9d124f WHIRLPOOL 4cf3b04ac16438af5cca230722377b3eeb7a534915f57cb5c9c99eaf30762079dd9a755d876d10461042d7b6a489900387d1d6d2ce9473f6c71b265dc946ad53
-MISC ChangeLog 662 SHA256 de637e9772f6600d795531c3ca8442cbd40bc6bf53f93d779274e4c55e23daf5 SHA512 4c8ccea0371ba9ab0a17095b8549dcd72b3203abf70e45a5ba4aa66069efd6e0505fd595b82e8f8bf1c3490dc64ae1e6228bbf133684b9dcd55f9eb37076f550 WHIRLPOOL 96bd436668ea471465491649d2827ad88eac7ea8bfef01b8a4ca5d21b4f7f6fe255b04e61e270f716ced841546d8464612cede99353a22e04958d761ac121f2d
+EBUILD ptpython-0.11.ebuild 869 SHA256 04b472ddccfb757baf7fa94f4d114180579eaa75dd49a43d0eefebaec45d0be6 SHA512 4c6a9811fe757e9e248db37080e75e67666b8121b968af87040723485f5aa9dcef9314ce0549669c20dcb8fa238a6936978529bdb36090a464eb6905a98c77f2 WHIRLPOOL 0510538312bbafdcdf9f598e297a818877679f3e1cc6ef928ad7b241c548f5699e21d31aeebb6b0f2c35290beb6f679dceb8c995af091c68721f6544488049f3
+MISC ChangeLog 824 SHA256 3ad059d9aed2f7c1c15231521ee6b2e2d66fec4859d55382eb2004ad82c91641 SHA512 edeca01bc6797ecbd83c084df73e0c36a3beea635b55f608dbdf89f8aa3e998540c35c3efb829a852cbf4c1e54068527287c3cf59155488bee314a6339573e57 WHIRLPOOL c8296b618c0c61d14396cc89c19952368383f4c81f2fd7e12d5b72994121ffdeb684f99ae9105c7aed5e2cb53ab459289902f808b35204ea67977c94188ff577
 MISC metadata.xml 236 SHA256 feedd499ae6ddebc364ebb0f38d08bfbcc6b5d499f805a307a9367fb82dd12e8 SHA512 02882c2ecdf4fe400bf3e4455df1feae173e12b6fbb09181ea50541bb9dbf43780a0ab00fa799ccf5b7f2c27dcf9d854e16146cfb336ff3270a7b4369e451860 WHIRLPOOL b6580a9428931142ea961e985e6b5c736ab716eefb85706692c780c11f97d6019be488493c2e2a51b7ae8b480be80276edddb2858fe19684d48df64433475e06
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJVVbeAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVbrajXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiu6gP+gKzkfwEdQ0NYMUJnCjL/IY8
-bEzLG6+lcDs3c49Q9K3jWd9J3ovfZS16YSrefxS0ZqG0djRm/ZYFiIEyT+akQg7N
-6emTaieY44FVsowkH9o65peegiCQgcbIuHKwgh+tFsVpza6V9jpPCD9Hc30poReU
-Es2pp950GAy7f4TZ152vhsJhHmpA51eMOyThM3zLICg0LVMYBNcOa/G9fy4+I5Zz
-cA67Oz3mU5OYHX1d45nIaYv8L79pFonvEZQz14xstiBZAPnVrUsWgJJUTHonVXXM
-FsleIRoFi1rX2xfD4tXV+LFXsanETbjTAx2IljEDe9vUM1AwIZWrzXZnJBYi/FSu
-b78jVIBezUwmzcP94iWA1l6a4BvOeCYxxUKPZTjiAVU6n7TEBC9ApJAJdHRaw0ko
-HeMgH1dL77p9Hcf3OsbgxefTlfmhk+SnsdQca7eWCXGkgoSw1yu9tdPzCqDgtaYi
-DMbt1WqhHcHJPiLGtMKfHfdlfcy2Gd8rGhF4h6k6W1jyezvSFAtxTMW0sM8L02xW
-4vR3gFYIrDGog7UXn+bCL6K65N8RyXC+rfvr1qWbXDV/p6kYeIIruWL04eEgu+W+
-KF34TnXx89uerPrLEhz2OAknkSk+4VsuZ2aNaz1t4gCgh48T/RUty6m2UIarFxuz
-9ilLLx/Xt6smszfnaPNT
-=gwZD
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmidUYP/1rv0VkQW65XfrUpuKMFBZPg
+yb6QT3ld06gi9lt0HhY7bHpl+Ox5fINpxhieXVBGazGetMsjIhIyq0k3Urr0gQjA
+nQjV0lk14hQVOr7ia9RArG8MKEn0U7Tcp8LJ7ehqzlH5ESye3p2V+onlJD2ao0Jv
+L3mn9K5ZVpJv7pjDR9HIovabbtTZokznJ9dBzQAFeEKUg0X/K5/Fb0336tRDuP/U
+MmF9SO9UJr1rWSC0uPiHqgn6tm0IsWgxxxeT+rE4JA/rbFWxzfrp3yFjWoqUBYom
+yjp9geEouSK0sOOjuWjFzgQInQUkbnPvdTobJKI4wg+L34xS+b1J59qPlUtH9od4
+2gWLFhABqoV5JaKepuzMlUUmpWJLHG0hhf8JtXCVyp9rwbf4O7aHM7/AJeW9SBab
+0qXEsrKyG6LZzZ+qM192h+FTrKmdv6PcBX+7hnM2ZEtuUYEEs90yGr/pfS1W8Tvv
+DZIYa4lhRcYHzrRIqbiBKY2k4IMkIR5y079NDplkcNck7d6EzGMs1Yp2BCk5Gitr
++NRMFtrDCLt0lUX6XuulUNFrYbRO8nHZ99XoELe3zXIiZB2SQw4aEzB7tie3BaKb
+Zvn4JODfqH5KEunPxdrFf/vivHmHzGIl3Xqr/bGUGQQ6S2yuO0Jn+UG7hwwZpGAe
+6VDP5ukLK47U3hBPqCwy
+=uA3d
 -----END PGP SIGNATURE-----
