@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ptpython/ptpython-0.8.ebuild,v 1.1 2015/05/05 18:01:58 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ptpython/ptpython-0.11.ebuild,v 1.1 2015/06/03 08:11:14 jlec Exp $
 
 EAPI=5
 
@@ -18,8 +18,8 @@ KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
 RDEPEND="
-	>=dev-python/prompt_toolkit-0.34[${PYTHON_USEDEP}]
-	>=dev-python/jedi-0.8.1-r1[${PYTHON_USEDEP}]
+	>=dev-python/prompt_toolkit-0.38[${PYTHON_USEDEP}]
+	>=dev-python/jedi-0.9.0[${PYTHON_USEDEP}]
 	dev-python/docopt[${PYTHON_USEDEP}]
 "
 DEPEND="${RDEPEND}
