@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/ptpython
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ptpython/ChangeLog,v 1.4 2015/05/15 09:08:15 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ptpython/ChangeLog,v 1.5 2015/06/03 08:11:14 jlec Exp $
+
+*ptpython-0.11 (03 Jun 2015)
+
+  03 Jun 2015; Justin Lecher <jlec@gentoo.org> +ptpython-0.11.ebuild,
+  -ptpython-0.5.ebuild, -ptpython-0.8.ebuild:
+  Version Bump
 
 *ptpython-0.10 (15 May 2015)
 
