@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/prompt_toolkit
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/prompt_toolkit/ChangeLog,v 1.4 2015/05/15 09:05:32 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/prompt_toolkit/ChangeLog,v 1.5 2015/06/03 08:07:36 jlec Exp $
+
+*prompt_toolkit-0.38 (03 Jun 2015)
+
+  03 Jun 2015; Justin Lecher <jlec@gentoo.org> +prompt_toolkit-0.38.ebuild,
+  -prompt_toolkit-0.31.ebuild, -prompt_toolkit-0.34.ebuild:
+  Version Bump
 
 *prompt_toolkit-0.37 (15 May 2015)
 
